
// NOTE: This code is generated. DO NOT EDIT!!
syntax = "proto3";

package some.package;


service SomeService {

  // DO NOT EDIT! (this code is generated)
  rpc someRpc(GrpcRequestWithOption) returns (GrpcSomeResponse) {}
}



// DO NOT EDIT! (this code is generated)
message GrpcNoneOptionString {

}


// DO NOT EDIT! (this code is generated)
message GrpcSomeString {
  string value = 1;
}


// DO NOT EDIT! (this code is generated)
message GrpcOptionString {
  oneof OptionString {
    GrpcNoneString a = 1;
    GrpcSomeString b = 2;
  }
}


// DO NOT EDIT! (this code is generated)
message GrpcFailureResponse {
  string err = 1;
}


// DO NOT EDIT! (this code is generated)
message GrpcNoneString {

}


// DO NOT EDIT! (this code is generated)
message GrpcOptionOptionString {
  oneof OptionOptionString {
    GrpcNoneOptionString a = 1;
    GrpcOptionString b = 2;
  }
}


// DO NOT EDIT! (this code is generated)
message GrpcSomeResponse {
  oneof sealed_value {
    GrpcFailureResponse a = 1;
    GrpcSuccessfulResponse b = 2;
  }
}


// DO NOT EDIT! (this code is generated)
message GrpcRequestWithOption {
  GrpcOptionString newProp = 1;
  GrpcOptionOptionString field = 2;
}


// DO NOT EDIT! (this code is generated)
message GrpcSuccessfulResponse {

}

